--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -22,7 +22,8 @@
     "@adonisjs/core",
     "@adonisjs/lucid",
     "@adonisjs/auth",
-    "@adonisjs/lucid-slugify"
+    "@adonisjs/lucid-slugify",
+    "@adonisjs/redis"
   ],
   "aceProviders": [
     "@adonisjs/repl"
