--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/lucid-slugify": "^2.2.1",
+    "@adonisjs/redis": "^7.3.2",
     "@adonisjs/repl": "^3.1.11",
     "luxon": "^3.3.0",
     "pg": "^8.10.0",
